--- a/index.html
+++ b/index.html
@@ -32,27 +32,29 @@
     <link rel="preload" href="/src/main.tsx" as="script" />
     <link rel="preload" href="/src/index.css" as="style" />
 
-    <!-- Open Graph Defaults -->
+    <!-- Open Graph: Discord / Slack / FB / LinkedIn -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Cole Carey | Software Engineer" />
     <meta
             property="og:description"
             content="Portfolio and projects by Cole Carey — full-stack developer and Solana engineer."
     />
-    <meta property="og:image" content="/og-default.jpg" />
+    <meta property="og:image" content="https://projectcarey.dev/screenshot-home-1280x720.jpg" />
+    <meta property="og:image:width" content="1280" />
+    <meta property="og:image:height" content="720" />
     <meta property="og:url" content="https://projectcarey.dev/" />
     <meta property="og:site_name" content="Cole Carey" />
 
-    <!-- Twitter -->
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Cole Carey | Software Engineer" />
     <meta
             name="twitter:description"
             content="Portfolio and projects by Cole Carey — full-stack developer and Solana engineer."
     />
-    <meta name="twitter:image" content="/og-default.jpg" />
+    <meta name="twitter:image" content="https://projectcarey.dev/screenshot-home-1280x720.jpg" />
 
-    <!-- Progressive enhancement for Apple devices -->
+    <!-- Apple Enhancement -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 </head>
@@ -61,11 +63,11 @@
 <noscript>
     <p
             style="
-          text-align: center;
-          padding: 2rem;
-          color: #ccc;
-          background: #000;
-          font-family: sans-serif;
+            text-align: center;
+            padding: 2rem;
+            color: #ccc;
+            background: #000;
+            font-family: sans-serif;
         "
     >
         This site requires JavaScript to display correctly.
